fix: [Ex02] header alignment

--- a/src/components/pages/Exercise02/components/Header/styles.css
+++ b/src/components/pages/Exercise02/components/Header/styles.css
@@ -7,7 +7,7 @@
 
 .movie-library__header__container {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 830px;
 }
 
 .movie-library__header__title {
